move arquivos de referencias para pasta referencias

--- a/referencias/referencias.html
+++ b/referencias/referencias.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2022-12-17" />
 
-<title>Referências</title>
+<title>Referências dos pacotes utilizados</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -379,7 +379,7 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Referências</h1>
+<h1 class="title toc-ignore">Referências dos pacotes utilizados</h1>
 <h4 class="author">Beatriz</h4>
 <h4 class="date">2022-12-17</h4>
 
